footer en todos los links

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
 		<a href="rutas.html" title="rutas">PLANEE SU RUTA</a> |
 		<a href="contacto.html" title="contacto">CONTACTO</a> |
 	</nav>
-	<div>
+	<div class="container">
 		<img src="img/transmilenio.jpg" alt="imagen de transmilenio">
 	</div>
+	<div>
+		<footer>
+			<p>Posted by: Santigo Huertas y Juan David </p>
+			<p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+		</footer>
+	</div>
+
+
 </body>
 
 </html>
