--- a/nosotros.html
+++ b/nosotros.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
 </head>
+
 <body>
         <header>
                 <h1>Transmi-T</h1>
@@ -17,14 +19,22 @@
                 <a href="nosotros.html" title="nosotros">SOBRE NOSOSTROS</a> |
                 <a href="rutas.html" title="rutas">PLANEE SU RUTA</a> |
                 <a href="contacto.html" title="contacto">CONTACTO</a> |
-            </nav>
-		<p>Somos un grupo de ciudadanos que pensamos en brindar información a otros ciudadanos sobre transmilenio para que
-			tengan una mejor experiencia</p>
-		<aside>
-			<img src="img/spidey.jpg" alt="nuestro amigable vecino spider-man">
-		</aside>
-		<audio controls>
-			<source src="audio/peñalosada.mp3" type="audio/mp3">
-		</audio>
+        </nav>
+        <p>Somos un grupo de ciudadanos que pensamos en brindar información a otros ciudadanos sobre transmilenio para
+                que
+                tengan una mejor experiencia</p>
+        <aside>
+                <img src="img/spidey.jpg" alt="nuestro amigable vecino spider-man">
+        </aside>
+        <audio controls>
+                <source src="audio/peñalosada.mp3" type="audio/mp3">
+        </audio>
+        <div>
+                <footer>
+                        <p>Posted by: Santigo Huertas y Juan David </p>
+                        <p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+                </footer>
+        </div>
 </body>
+
 </html>
