--- a/novedades.html
+++ b/novedades.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <header>
-            <h1>Transmi-T</h1>
-            <h2>Novedades y servicios</h2>
+        <h1>Transmi-T</h1>
+        <h2>Novedades y servicios</h2>
     </header>
     <nav>
-            <a href="index.html" title="home">HOME</a> |
-            <a href="novedades.html" title="novedades">NOVEDADES/SERVICIOS</a> |
-            <a href="nosotros.html" title="nosotros">SOBRE NOSOSTROS</a> |
-            <a href="rutas.html" title="rutas">PLANEE SU RUTA</a> |
-            <a href="contacto.html" title="contacto">CONTACTO</a> |
-        </nav>
+        <a href="index.html" title="home">HOME</a> |
+        <a href="novedades.html" title="novedades">NOVEDADES/SERVICIOS</a> |
+        <a href="nosotros.html" title="nosotros">SOBRE NOSOSTROS</a> |
+        <a href="rutas.html" title="rutas">PLANEE SU RUTA</a> |
+        <a href="contacto.html" title="contacto">CONTACTO</a> |
+    </nav>
+    <div>
+        <footer>
+            <p>Posted by: Santigo Huertas y Juan David </p>
+            <p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+        </footer>
+    </div>
 </body>
+
 </html>
