--- a/rutas.html
+++ b/rutas.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
 </head>
+
 <body>
-    <header>
-        <h1>Transmi-T</h1>
-        <h2>Planee su ruta</h2>
-    </header>
-    <nav>
-            <a href="index.html" title="home">HOME</a> |
-            <a href="novedades.html" title="novedades">NOVEDADES/SERVICIOS</a> |
-            <a href="nosotros.html" title="nosotros">SOBRE NOSOSTROS</a> |
-            <a href="rutas.html" title="rutas">PLANEE SU RUTA</a> |
-            <a href="contacto.html" title="contacto">CONTACTO</a> |
-        </nav>
-    <section>
-			<table>
-			  <tr>
-			    <th>Servicio</th>
-			    <th>Horario</th>
-			  </tr>
-			  <tr>
-			    <td>C19</td>
-			    <td>L-S 5:30 am - 10:00 pm</td>
-			  </tr>
-			  <tr>
-			    <td>K23</td>
-			    <td>L-S 5:30 am - 10:00 pm</td>
-			  </tr>
-			  <tr>
-			    <td>B23</td>
-			    <td>L-S 5:30 am - 10:00 pm</td>
-			  </tr>
-			  <tr>
-			    <td rowspan="2">G12</td>
-			    <td>L-S 5:30 am - 11:00 pm</td>
-			    
-			  </tr>
-			  <tr>
-			  	<td>D 5:30 am - 10:00pm </td>
-			  </tr>
-			  <tr>
-			    <td>H15</td>
-			    <td>L-S 5:30 am hasta 11:00 pm</td>
-			  </tr>
-			</table>
-		</section>    
-        <img src="img/plan.jpg" alt="rutas">
+	<header>
+		<h1>Transmi-T</h1>
+		<h2>Planee su ruta</h2>
+	</header>
+	<nav>
+		<a href="index.html" title="home">HOME</a> |
+		<a href="novedades.html" title="novedades">NOVEDADES/SERVICIOS</a> |
+		<a href="nosotros.html" title="nosotros">SOBRE NOSOSTROS</a> |
+		<a href="rutas.html" title="rutas">PLANEE SU RUTA</a> |
+		<a href="contacto.html" title="contacto">CONTACTO</a> |
+	</nav>
+	<section>
+		<table>
+			<tr>
+				<th>Servicio</th>
+				<th>Horario</th>
+			</tr>
+			<tr>
+				<td>C19</td>
+				<td>L-S 5:30 am - 10:00 pm</td>
+			</tr>
+			<tr>
+				<td>K23</td>
+				<td>L-S 5:30 am - 10:00 pm</td>
+			</tr>
+			<tr>
+				<td>B23</td>
+				<td>L-S 5:30 am - 10:00 pm</td>
+			</tr>
+			<tr>
+				<td rowspan="2">G12</td>
+				<td>L-S 5:30 am - 11:00 pm</td>
+
+			</tr>
+			<tr>
+				<td>D 5:30 am - 10:00pm </td>
+			</tr>
+			<tr>
+				<td>H15</td>
+				<td>L-S 5:30 am hasta 11:00 pm</td>
+			</tr>
+		</table>
+	</section>
+	<div>
+		<img src="img/plan.jpg" alt="rutas">
+	</div>
+	<div>
+		<footer>
+			<p>Posted by: Santigo Huertas y Juan David </p>
+			<p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+		</footer>
+	</div>
 </body>
+
 </html>
