--- a/novedades.html
+++ b/novedades.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Novedades</title>
 </head>
+
 <body>
     <header>
-            <h1>Transmi-T</h1>
-            <h2>Novedades y servicios</h2>
+        <h1>Transmi-T</h1>
+        <h2>Novedades y servicios</h2>
     </header>
     <nav>
-            <a href="index.html" title="home">HOME</a> |
-            <a href="novedades.html" title="novedades">NOVEDADES/SERVICIOS</a> |
-            <a href="nosotros.html" title="nosotros">SOBRE NOSOSTROS</a> |
-            <a href="rutas.html" title="rutas">PLANEE SU RUTA</a> |
-            <a href="contacto.html" title="contacto">CONTACTO</a> |
-        </nav>
+        <a href="index.html" title="home">HOME</a> |
+        <a href="novedades.html" title="novedades">NOVEDADES/SERVICIOS</a> |
+        <a href="nosotros.html" title="nosotros">SOBRE NOSOSTROS</a> |
+        <a href="rutas.html" title="rutas">PLANEE SU RUTA</a> |
+        <a href="contacto.html" title="contacto">CONTACTO</a> |
+    </nav>
+    <section>
+        <article>
+            <h2>Aumento de precio del pasaje de Transmilenio 2019</h2>
+            <img src="img/n1.jpg" alt="Noticia 1">
+            <p><strong>11 de Enero 2019</strong></p> 
+            <p>La Secretaría de Movilidad dio a conocer que ya tiene listo <br>
+                el decreto que dará paso a la aprobación del aumento en la <br>
+                tarifa a Transmilenio. <br>
+                El pasaje quedará en $2.400 y el del SITP en $2.200.</p>
+                <button onclick="window.location.href = 'https://www.elespectador.com/noticias/bogota/tarifa-de-transmilenio-aumentara-100-en-2019-articulo-833588';">Más información</button>
+        </article>
+        <article>
+            <h2>11 cosas que debería saber del metro de Bogotá</h2>
+            <img src="img/n2.jpg" alt="Noticia 2">
+            <p><strong>6 de Enero 2018</strong></p> 
+            <p>¿Cómo será? ¿Cuánto costará? ¿en qué va el proceso?<br>
+                ¿ que pasaría si Petro llega a la presidencia y se reversa la obra?<br>
+                A estas y otras preguntas contestó la Empresa Metro de Bogotá.</p>
+            <button onclick="window.location.href = 'https://www.semana.com/nacion/articulo/11-cosas-que-deberia-saber-del-metro-de-bogota/569796';">Más información</button>
+        </article>
+        <article>
+            <h2>Conozca los cambios en las rutas fáciles de Transmilenio</h2>
+            <img src="img/n3.jpg" alt="Noticia 3">
+            <p><strong>2 de Junio 2017</strong> </p>
+            <p>Desde el 17 de junio estos servicios serán circulares.<br>
+             Es decir, que no irán de portal a portal.</p>
+             <button onclick="window.location.href = 'http://caracol.com.co/emisora/2017/06/02/album-01/1496439213_784024.html';">Más información</button>
+        </article>
+    </section>
 </body>
+
 </html>
