--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
 	<title>Transmi-T</title>
 	<meta charset="utf-8">
+	<link rel="trasmi icon" href="img/logo.jpg">
 </head>
 
 <body>
 	<header>
 		<h1>Transmi-T</h1>
 	</header>
+	<div>
+		<p>
+			<img src="img/logo.jpg" align="right">Texto tan extenso como queramos que cubrirá la parte izquierda de la
+			imagen. Sigo poniendo texto para que se vea el efecto, Bla bla bla bla bla bla bla...
+		</p>
+	</div>
 	<nav>
 		<a href="index.html" title="home">HOME</a> |
 		<a href="novedades.html" title="novedades">NOVEDADES/SERVICIOS</a> |
