footer ingresado a contacto

--- a/contacto.html
+++ b/contacto.html
@@ -26,6 +26,12 @@
         <input type="mail" name="mail" placeholder="Ingresa tu correo">
         <input type="submit" name="enviar" value="enviar">
     </form>
+    <div>
+        <footer>
+            <p>Posted by: Santigo Huertas y Juan David </p>
+            <p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+        </footer>
+    </div>
 </body>
 
 </html>
