puse el banner de noticias

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Transmi-T</title>
 	<meta charset="utf-8">
 	<link rel="trasmi icon" href="img/logo.jpg">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -26,6 +27,19 @@
 	</nav>
 	<div class="container">
 		<img src="img/transmilenio.jpg" alt="imagen de transmilenio">
+	</div>
+	</div>
+	<div class="slider">
+		<ul>
+			<li><a href="https://bit.ly/2HItHnp" target="_blank"><img src="img/trasmi1.png"
+						alt="imagen de noticia"></a> </li>
+			<li><a href="https://bit.ly/2GlZjOn" target="_blank"><img src="img/trasmi2.png"
+						alt="imagen de noticia"></a> </li>
+			<li><a href="https://bit.ly/2uu6exL" target="_blank"><img src="img/trasmi3.png"
+						alt="imagen de noticia"></a> </li>
+			<li><a href="https://bit.ly/2UbYL4S" target="_blank"><img src="img/trasmi4.png"
+						alt="imagen de noticia"></a> </li>
+		</ul>
 	</div>
 	<div>
 		<footer>
